# stock-friend-cli

./: .env.example  .gitignore  Bloomberg-Exchange-Code-to-MIC-Mapping (1).csv  CLAUDE.md  COMPLIANCE_INTEGRATION_SUMMARY.md  PRD.md  PROGRESS.md  README.md  pyproject.toml  test_typer_debug.py  test_typer_minimal.py
.claude/agents/: halal-momentum-analyst.md  pragmatic-developer.md  strategy-system-architect.md
docs/: MARKET_DATA_GATEWAY.md  PRD_Summary.md  SYMBOL_NORMALIZATION_DESIGN.md  TRD_Part1_Architecture.md  TRD_Part2_DataModels_Services.md  TRD_Part3_Indicators_DataAccess.md  TRD_Part4_Integration_Security_Performance.md  TRD_Part5_Implementation_Testing.md  YFINANCE_INTEGRATION_PLAN.md  ZOYA_EXCHANGE_CODE_VERIFICATION.md
examples/: stock_data_example.py
scripts/: README.md  check_halal_compliance_universe.py  fetch_all_compliant_from_zoya.py  generate_exchange_mappings.py  scrape_tradingview.py
src/stock_friend/: __init__.py  __main__.py
src/stock_friend/cli/: __init__.py  app.py  menu.py  mock_data.py  portfolio_cli.py  screening_cli.py  search_cli.py  strategy_cli.py
src/stock_friend/data/: exchange_mappings.py
src/stock_friend/gateways/: __init__.py  alpha_vantage_gateway.py  base.py  universe_gateway.py  yfinance_gateway.py
tests/: __init__.py
tests/fixtures/: __init__.py  mock_responses.py
tests/integration/: test_alpha_vantage_integration.py
tests/unit/: __init__.py  test_alpha_vantage_gateway.py  test_chart_presenter.py  test_config.py  test_gateway_factory.py  test_search_service.py  test_universe_gateway.py  test_yfinance_gateway.py
(+37 files in other folders)
